--- a/hr-mvp/package.json
+++ b/hr-mvp/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "form-data": "^4.0.0",
     "moment": "^2.29.2",
     "next": "12.1.5",
     "query-string": "^7.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
