--- a/hr-mvp/package.json
+++ b/hr-mvp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "firebase": "^9.7.0",
     "form-data": "^4.0.0",
     "moment": "^2.29.2",
     "next": "12.1.5",
